--- a/index.html
+++ b/index.html
@@ -5,32 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sign Up | Mark Kipngeno</title>
   <link rel="stylesheet" href="sign-up-page.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 <body>
   <div class="signup-box">
     <h2>Create Your Account</h2>
     <form>
       <div class="input-group">
+        <span class="material-symbols-outlined">person</span>
         <input type="text" id="fullName" placeholder=" " required />
         <label for="fullName">Full Name</label>
       </div>
+
       <div class="input-group">
+        <span class="material-symbols-outlined">mail</span>
         <input type="email" id="email" placeholder=" " required />
         <label for="email">Email</label>
       </div>
+
       <div class="input-group">
+        <span class="material-symbols-outlined">lock</span>
         <input type="password" id="password" placeholder=" " required />
         <label for="password">Password</label>
       </div>
 
       <div class="show-pass">
-        <input type="checkbox" id="togglePass"/>
+        <input type="checkbox" id="togglePass" />
         <label for="togglePass">Show Password</label>
       </div>
 
-
       <button type="submit">Sign Up</button>
     </form>
+
     <div class="login-link">
       <p>Already have an account? <a href="#">Log In</a></p>
     </div>
