--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
     <div class="login-link">
       <p>Already have an account? <a href="#">Log In</a></p>
     </div>
+
+    <buttton> Sign up with Google</buttton>
+    <buttton> Sign up with Apple</buttton>
   </div>
 
   <script>
