--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
       <p>Already have an account? <a href="#">Log In</a></p>
     </div>
 
-    <buttton> Sign up with Google</buttton>
-    <buttton> Sign up with Apple</buttton>
+  <div class="signup-buttons">
+  <button class="google-btn">Sign up with Google</button>
+  <button class="apple-btn">Sign up with Apple</button>
+</div>
+
   </div>
 
   <script>
