added the confirm password

--- a/index.html
+++ b/index.html
@@ -12,12 +12,8 @@
   <div class="signup-box">
     <h2>Create Your Account</h2>
     <form>
-      <div class="input-group">
-        <span class="material-symbols-outlined">person</span>
-        <input type="text" id="fullName" placeholder=" " required />
-        <label for="fullName">Full Name</label>
-      </div>
 
+      
       <div class="input-group">
         <span class="material-symbols-outlined">mail</span>
         <input type="email" id="email" placeholder=" " required />
@@ -30,13 +26,23 @@
         <label for="password">Password</label>
       </div>
 
+      <div class="input-group">
+        <span class="material-symbols-outlined">lock</span>
+        <input type="password" id="confirmPassword" placeholder=" " required />
+        <label for="confirmPassword">Confirm Password</label>
+      </div>
+
       <div class="show-pass">
         <input type="checkbox" id="togglePass" />
         <label for="togglePass">Show Password</label>
       </div>
 
       <button type="submit">Sign Up</button>
+
+
     </form>
+
+
 <br><br>
          <hr> <br>
       
