password strength indicator

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
         <label for="confirmPassword">Confirm Password</label>
       </div>
 
+      <div id="passwordStrength" class="password-strength">
+        <div class="strength-bar" id="strengthBar"></div>
+        <span id="strengthText">Weak</span>
+      </div>
+
       <div class="show-pass">
         <input type="checkbox" id="togglePass" />
         <label for="togglePass">Show Password</label>
