--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
       </div>
 
       <div id="passwordStrength" class="password-strength">
-        <div class="strength-bar" id="strengthBar"></div>
-        <span id="strengthText">Password Strength: Weak</span>
+        <div id="strengthBar" class="strength-bar" style="height: 6px; width: 0%; background-color: gray; transition: width 0.3s ease;"></div>
+        <span id="strengthText" style="display: block; margin-top: 5px;">Password Strength</span>
       </div>
+      
 
       <br><br>
       <div class="show-pass">
@@ -57,6 +58,8 @@
       <p>Already have an account? <a href="#">Log In</a></p>
     </div>
   </div>
+
+
   <script>
     function validatePasswords() {
       const password = document.getElementById("password").value;
